# TimeLM

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality-main.yaml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: cna_2019_2021.yaml  date_cna_2019_2021.yaml  date_gigaword_nyt_p.yaml  date_gigaword_xin_p.yaml  date_ldc_cna.yaml  date_text_ldc_cna.yaml  default.yaml  gigaword_nyt_p.yaml  gigaword_xin_p.yaml  ldc_cna.yaml  three_emb_ldc_cna.yaml  week_ldc_cna.yaml
configs/experiment/: attendaternnlm.yaml  attendaternnlm_forward.yaml  daternnlm.yaml  lstmdaternnlm.yaml  rnnlm.yaml  threeembrnnlm.yaml  transformerlm.yaml  transformerlm_1998-1999.yaml  transformerlm_1998-1999_prepend.yaml  transformerlm_1998-1999_prepend_range7.yaml  transformerlm_1998-1999_prepend_range7_pred.yaml  transformerlm_2008-2009.yaml  transformerlm_2008-2009_prepend.yaml  transformerlm_2008-2009_prepend_range7.yaml  transformerlm_2008-2009_prepend_range7_w_encoder.yaml  transformerlm_cna_2019_2021_2019-2020.yaml  transformerlm_cna_2019_2021_2019-2020_prepend.yaml  transformerlm_cna_2019_2021_2019-2020_prepend_range7.yaml  transformerlm_nyt_1998-1999.yaml  (+19 more)
src/: train.py  train_tokenizer.py
tests/: test_datamodules.py
tokenizer/: cna_2019_2021_char_6982.model  cna_2019_2021_char_6982.vocab  gigaword_nyt_p_bpe_4000.model  gigaword_nyt_p_bpe_4000.vocab  gigaword_xin_p_char_7761.model  gigaword_xin_p_char_7761.vocab  ldc_cna_char_8000.model  ldc_cna_char_8000.vocab
(+32 files in other folders)
